--- a/Front/api-autores-ts/package.json
+++ b/Front/api-autores-ts/package.json
@@ -12,13 +12,15 @@
     "@types/react-dom": "^18.0.8",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "formik": "^2.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.5",
     "typescript": "^4.8.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
